<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="Highest_score">Highest score</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="actionBarIconDeletePlayerMessage">Delete Player</string>
    <string name="actionBarIconResetMessage">Reset Scores</string>
    <string name="actionBarNewPlayer">Add New Player</string>
    <string name="actionBarStatsMessage">Stats</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Power Darts</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="averages">Averages</string>
    <string name="best_leg">Best leg</string>
    <string name="cancel">Cancel</string>
    <string name="checkoutDialogMessage">How many darts?</string>
    <string name="checkout_percent">Checkout Percent</string>
    <string name="checkout_title_row">Finishing</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="currentPlayerIcon">►</string>
    <string name="current_player_name_heading">Player 1:</string>
    <string name="dartboard_pic">This is dartboard image</string>
    <string name="darts_thrown_heading">Darts</string>
    <string name="db2">dartboard_2</string>
    <string name="decline">Decline</string>
    <string name="del_button">del</string>
    <string name="editNameTag">Edit Name</string>
    <string name="enterName">Enter Name</string>
    <string name="enter_button">enter</string>
    <string name="game_info_instructions_txt">To begin the game press the start button. Then before you can input your you must stop the timer using the stop buttton.</string>
    <string name="game_instructions_txt">In this screen you can set up the number of legs you would like to play as well as the start score and also the timer details and the penalty deductions</string>
    <string name="hello_world">Hello world!</string>
    <string name="high_score">best score</string>
    <string name="highest_checkout">highest out</string>
    <string name="humanOrCpu">Game Mode</string>
    <string name="instructions_tag">Instructions</string>
    <string name="leg_number_title">Leg Num</string>
    <string name="legsPlayed">Legs Played</string>
    <string name="legsWon">Legs Won</string>
    <string name="legs_heading">Legs</string>
    <string name="legs_played">Legs played</string>
    <string name="legs_won">legs won</string>
    <string name="manage_players">Manage Players</string>
    <string name="maximums">180s</string>
    <string name="modeTag">Mode</string>
    <string name="newGamePrompt">Are you sure you want a new game</string>
    <string name="newPlayerName">Enter player name!</string>
    <string name="noNewGame">No</string>
    <string name="numLegs">Number of Legs</string>
    <string name="num_1">new button</string>
    <string name="num_eight">8</string>
    <string name="num_five">5</string>
    <string name="num_four">4</string>
    <string name="num_nine">9</string>
    <string name="num_one">1</string>
    <string name="num_seven">7</string>
    <string name="num_six">6</string>
    <string name="num_three">3</string>
    <string name="num_two">2</string>
    <string name="num_zero">0</string>
    <string name="oneDartAverage">1 da avg</string>
    <string name="oneEighties">180s</string>
    <string name="oneForties">140 – 179</string>
    <string name="oneHundreds">100 – 139</string>
    <string name="one_dart_ave">1 dart ave</string>
    <string name="one_fortys">140+</string>
    <string name="one_hundreds">100+</string>
    <string name="overallStatistics">Overall Statistics</string>
    <string name="p1_first_nine_avg">1st nine ave</string>
    <string name="penaltyForTimeout">Timeout Penalty</string>
    <string name="playGame">Play Game</string>
    <string name="playGameBottomBanner">ca-app-pub-3446322934256576/5927803018</string>
    <string name="playGameCheckoutMsg">Out</string>
    <string name="play_game">Play Game</string>
    <string name="player1Tag">Player 1</string>
    <string name="player2Tag">Player 2</string>
    <string name="playerName">Player Name</string>
    <string name="playerNameTag">Name</string>
    <string name="playerStats">Player Stats</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_heading">Player:</string>
    <string name="playersTag">Players</string>
    <string name="positiveAnswer">Yes</string>
    <string name="quick_input_26">26</string>
    <string name="quit">Quit</string>
    <string name="resetScoresNewGame">Reset</string>
    <string name="resume_game">Resume Game</string>
    <string name="score_left_heading">Left</string>
    <string name="scorer_sc">Scorer Screen</string>
    <string name="scoring">Scoring</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="setup_tag">Setup Screen</string>
    <string name="sixty_plus">60+</string>
    <string name="sixtys">60 – 99</string>
    <string name="startScore">Starting Score</string>
    <string name="startTimerForOpponentMessage">Continue Game</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_heading">Match Statistics</string>
    <string name="stats">stats</string>
    <string name="statsInterstitialAd">ca-app-pub-3446322934256576/3490760214</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="switchOff">Nope</string>
    <string name="switchOn">Yeah</string>
    <string name="tester_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="threeDartAverage">3 da avg</string>
    <string name="three_dart_ave">3 dart ave</string>
    <string name="timeoutMessage">point penalty for timeout!</string>
    <string name="timerMode">Timer Mode</string>
    <string name="timerPerShot">Time per Shot</string>
    <string name="title_activity_game_options">game_options</string>
    <string name="title_activity_game_setup">Game Setup</string>
    <string name="title_activity_game_statistics">Game Statistics</string>
    <string name="title_activity_human_or_cpu_screen">HumanOrCpuScreen</string>
    <string name="title_activity_instructions_screen">Instructions</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_manage_players">Players</string>
    <string name="title_activity_manage_players_sub_screen">Player Information</string>
    <string name="title_activity_new_player">New Player</string>
    <string name="title_activity_play_game">Play Game</string>
    <string name="title_activity_player_setup_screen">PlayerSetupScreen</string>
    <string name="title_activity_player_stats">Player Stats</string>
    <string name="title_activity_select_player">Select Player</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_splash_screen">splash_screen</string>
    <string name="title_activity_stats_screen">Stats Screen</string>
    <string name="updateName">Update Name</string>
    <string name="worst_leg">Worst leg</string>
</resources>
