<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myRelLayout"
    android:background="@drawable/gradient"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffff4624"
        android:gravity="center"
        android:id="@+id/textView25"
        android:background="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_tag"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffff4624"
        android:gravity="center"
        android:id="@+id/textView26"
        android:background="@drawable/blue_shape_black_border"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:text="@string/setup_tag"
        android:layout_below="@+id/textView25"
        android:layout_alignLeft="@+id/textView28"/>
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff"
        android:gravity="center"
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/game_instructions_txt"
        android:layout_below="@+id/textView26"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffff4624"
        android:gravity="center"
        android:id="@+id/textView28"
        android:background="@drawable/blue_shape_black_border"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/scorer_sc"
        android:layout_below="@+id/textView27"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff"
        android:gravity="center"
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/game_info_instructions_txt"
        android:layout_below="@+id/textView28"
        android:layout_alignParentLeft="true"/>
</RelativeLayout>
