<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/a"
    android:background="#000"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/newNameHorLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">
            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#fff"
                android:gravity="center"
                android:id="@+id/textView34"
                android:paddingLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/playerNameTag"
                android:layout_weight="2"/>
            <EditText
                android:textSize="20sp"
                android:textColor="#fff"
                android:textColorHint="#cbc6c6"
                android:gravity="center_vertical"
                android:id="@+id/newPlayerName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/newPlayerName"
                android:ems="10"
                android:layout_weight="5"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:inputType="textPersonName"
                android:textCursorDrawable="@null"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="10"
            android:layout_below="@+id/newNameHorLayout"
            android:layout_alignParentRight="true">
            <Button
                android:id="@+id/cancelButton"
                android:background="@drawable/highlight_blue_to_white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:layout_below="@+id/newNameLabelP1"
                android:layout_alignParentLeft="true"
                android:onClick="onClickCancel"/>
            <Button
                android:id="@+id/enterNameButton"
                android:background="@drawable/highlight_blue_to_white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:text="@string/enterName"
                android:layout_weight="1"
                android:layout_alignTop="@+id/cancelButton"
                android:layout_alignRight="@+id/newPlayerName"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/fillerLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"/>
    </LinearLayout>
</RelativeLayout>
