<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout"
    android:background="@drawable/gradient"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:clickable="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/layoutContainer"
        android:clickable="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/imageContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="55">
            <ImageView
                android:id="@+id/imageView"
                android:background="#000"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/dartboard"
                android:adjustViewBounds="false"
                android:baselineAlignBottom="false"
                android:cropToPadding="false"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/dartboard_pic"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/buttonContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="45">
            <Button
                android:textSize="30sp"
                android:textColor="#000"
                android:gravity="center"
                android:id="@+id/button"
                android:background="@drawable/highlight_blue_to_white"
                android:focusableInTouchMode="false"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:text="@string/play_game"
                android:layout_weight="1"
                android:layout_below="@+id/layoutContainer"
                android:layout_alignLeft="@+id/layoutContainer"
                android:layout_alignRight="@+id/layoutContainer"
                android:onClick="onClickGoToSelectPlayer"/>
            <Button
                android:textSize="30sp"
                android:textColor="#000"
                android:gravity="center"
                android:id="@+id/button2"
                android:background="@drawable/highlight_blue_to_white"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:text="@string/manage_players"
                android:layout_weight="1"
                android:layout_below="@+id/button"
                android:onClick="onClickGoToManagePlayers"/>
            <Button
                android:textSize="30sp"
                android:id="@+id/button3"
                android:background="@drawable/highlight_blue_to_white"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:text="@string/resume_game"
                android:layout_weight="1"
                android:onClick="onClickResumeGame"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
