<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="#c0d0f8"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/containerScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/verticalLayoutContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow
                android:id="@+id/overallStatsTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:id="@+id/textView32"
                    android:background="#6face7"
                    android:paddingLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overallStatistics"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentRight="false"/>
            </TableRow>
            <TableRow
                android:id="@+id/playerNameTr"
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_below="@+id/textView32"
                android:layout_alignParentRight="true">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/textView36"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/playerName"
                    android:layout_weight="1"
                    android:layout_above="@+id/textView14"
                    android:layout_alignLeft="@+id/textView14"/>
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/playerNameTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="plyr name"
                    android:layout_weight="1"
                    android:layout_alignLeft="@+id/legsPlayed"
                    android:layout_alignBottom="@+id/textView36"/>
            </TableRow>
            <TableRow
                android:id="@+id/legsPlayedTr"
                android:background="#abc1f9"
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_below="@+id/playerNameTr"
                android:layout_alignParentLeft="true">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/textView37"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/legsPlayed"
                    android:layout_weight="1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"/>
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/legsPlayed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Legs Played"
                    android:layout_weight="1"
                    android:layout_alignTop="@+id/legsPlayed"
                    android:layout_alignParentLeft="true"/>
            </TableRow>
            <TableRow
                android:id="@+id/legsWonTr"
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_below="@+id/legsPlayedTr"
                android:layout_alignParentLeft="true">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/textView39"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/legsWon"
                    android:layout_weight="1"/>
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/legsWon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="legsWon"
                    android:layout_weight="1"
                    android:layout_alignBottom="@+id/legsWon"/>
            </TableRow>
            <TableRow
                android:id="@+id/scoringTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:id="@+id/textView31"
                    android:background="#6face7"
                    android:paddingLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scoring"
                    android:layout_below="@+id/legsWonTr"
                    android:layout_alignParentLeft="true"/>
            </TableRow>
            <TableRow
                android:id="@+id/sixtiesTr"
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_below="@+id/textView31"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/textView40"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sixtys"
                    android:layout_weight="1"/>
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/totalSixties"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="60s"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:id="@+id/tonsTr"
                android:background="#abc1f9"
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_below="@+id/sixtiesTr"
                android:layout_alignRight="@+id/textView23">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/textView41"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/oneHundreds"
                    android:layout_weight="1"/>
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/totalTons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="100s"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:id="@+id/tonFortiesTr"
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_below="@+id/tonsTr"
                android:layout_alignRight="@+id/textView23">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/textView42"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/oneForties"
                    android:layout_weight="1"/>
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/tonForties"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="140s"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:id="@+id/tonEightiesTr"
                android:background="#abc1f9"
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_below="@+id/tonFortiesTr"
                android:layout_alignRight="@+id/textView23">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/textView43"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/oneEighties"
                    android:layout_weight="1"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/tonEighties"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="180s"
                    android:layout_weight="1"
                    android:layout_alignTop="@+id/tonEighties"/>
            </TableRow>
            <TableRow
                android:id="@+id/averagesTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:id="@+id/textView23"
                    android:background="#6face7"
                    android:paddingLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/averages"
                    android:layout_below="@+id/tonEightiesTr"
                    android:layout_alignParentRight="true"/>
            </TableRow>
            <TableRow
                android:id="@+id/oneDaAvgTr"
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_below="@+id/textView23"
                android:layout_alignParentLeft="true">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/textView44"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/oneDartAverage"
                    android:layout_weight="1"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/oneDaAvg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="1 d avg"
                    android:layout_weight="1"
                    android:layout_alignTop="@+id/oneDaAvg"/>
            </TableRow>
            <TableRow
                android:id="@+id/threeDaAvgTr"
                android:background="#abc1f9"
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_below="@+id/oneDaAvgTr">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/textView45"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/threeDartAverage"
                    android:layout_weight="1"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:gravity="center"
                    android:id="@+id/threeDaAvg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="3 da Avg"
                    android:layout_weight="1"
                    android:layout_alignTop="@+id/threeDaAvg"/>
            </TableRow>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
